--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -52,20 +52,20 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e486"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
+            <h3 id="d1e504"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
             <p class="first">Il ne semble guère raisonnable, à première vue, de penser qu’une littérature entièrement
                <span class="STDitalic">nouvelle</span> soit un jour&nbsp;–&nbsp;maintenant, par exemple&nbsp;–&nbsp;possible. Les nombreuses tentatives, qui
                se sont succédé depuis plus de trente ans, pour faire sortir le récit de ses ornières
                n’ont abouti, au mieux, qu’à des œuvres isolées. Et –&nbsp;on nous le répète&nbsp;–&nbsp;aucune de
                ces œuvres, quel qu’en fût l’intérêt, n’a emporté l’adhésion d’un public comparable
                à celui du roman bourgeois. La seule conception romanesque qui ait cours aujourd’hui
-               est, en fait, celle de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>.</p>
-            <p>Sans mal on pourrait même remonter jusqu’à <span class="ref">madame de La Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="axi0">0</span>.</span></span>. La sacro-sainte analyse psychologique constituait, déjà à cette époque, la base
+               est, en fait, celle de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>.</p>
+            <p>Sans mal on pourrait même remonter jusqu’à <span class="ref">madame de La Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>. La sacro-sainte analyse psychologique constituait, déjà à cette époque, la base
                de toute prose&nbsp;: c’est elle qui présidait à la conception du livre, à la peinture
                des personnages, au déroulement de l’intrigue. Un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
                ou d’une absence de passion&nbsp;–&nbsp;dans un milieu <span id="page_17" class="STDgray STDsmall pb">[17]</span>donné. La plupart de nos romanciers contemporains du type traditionnel&nbsp;–&nbsp;c’est-à-dire
                ceux qui justement recueillent l’approbation des consommateurs&nbsp;–&nbsp;pourraient recopier
-               de longs passages de <span class="STDitalic">La Princesse de Clèves</span> ou du <span class="STDitalic">Père Goriot</span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
+               de longs passages de <span class="STDitalic"><span class="ref">La Princesse de Clèves<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span> ou du <span class="STDitalic"><span class="ref">Père Goriot<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span></span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
                faudrait-il changer quelque tournure, ou briser certaines constructions, donner çà
                et là le ton particulier de chacun au moyen d’un mot, d’une image hardie, d’une chute
                de phrase... Mais tous avouent, sans voir là rien d’anormal, que leurs préoccupations
@@ -81,7 +81,8 @@
                nouvelle, non seulement est désormais possible, mais est en train déjà de voir le
                jour, et qu’elle va représenter&nbsp;–&nbsp;en s’accomplissant&nbsp;–&nbsp;une révolution plus totale
                que celles d’où naquirent, jadis, le romantisme ou le naturalisme.</p>
-            <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Maintenant les choses vont changer&nbsp;!&nbsp;»</span><span id="page_18" class="STDgray STDsmall pb">[18]</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
+            <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: «&nbsp;Maintenant les choses
+               vont changer&nbsp;!&nbsp;» <span id="page_18" class="STDgray STDsmall pb">[18]</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
                maintenant&nbsp;?</p>
             <p>Devant l’art romanesque actuel, cependant, la lassitude est si grande&nbsp;–&nbsp;enregistrée
                et commentée par l’ensemble de la critique&nbsp;–&nbsp;qu’on imagine mal que cet art puisse
@@ -98,7 +99,7 @@
                prêts à reconnaître la valeur d’une recherche, restent malgré tout les héritiers d’une
                tradition. Or, inconsciemment jugée par référence aux formes consacrées, une forme
                nouvelle paraîtra toujours plus ou moins une absence de forme. Ne lit-on pas, dans
-               un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
+               un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
             <p><span id="page_19" class="STDgray STDsmall pb">[19]</span>Le nouveau-né balbutiant sera toujours considéré comme un monstre, même par ceux que
                l’expérience passionne. Il y aura de la curiosité, des mouvements d’intérêt, des réserves
                quant à l’avenir. Parmi les louanges sincères, la plupart s’adresseront aux vestiges
@@ -217,9 +218,9 @@
                chose n’était en train de changer&nbsp;–&nbsp;et même d’une façon totale, sans doute définitive&nbsp;–&nbsp;dans
                les rapports que nous entretenons avec l’univers. Aussi entrevoyons-nous la réponse
                à cette question pleine d’ironie&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»</span> Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
-               de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, comme de <span class="ref">Gide<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> ou de <span class="ref">madame&nbsp;de&nbsp;La&nbsp;Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="axi0">0</span>.</span></span>&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;profondeur&nbsp;»</span>.</p>
+               de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, comme de <span class="ref">Gide<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> ou de <span class="ref">madame&nbsp;de&nbsp;La&nbsp;Fayette<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;profondeur&nbsp;»</span>.</p>
             <p>On sait que toute la littérature romanesque reposait sur eux, sur eux seuls. Le rôle
-               de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature<span class="refinfo">concept, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
+               de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature<span class="refinfo">concept, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
                mettre au jour quelque bribe d’un secret troublant. Descendu dans l’abîme des passions
                humaines, il envoyait au monde tranquille en apparence (celui de la surface) des messages
                de victoire décrivant les mystères qu’il avait touchés du doigt. Et le vertige sacré
