--- a/04_livrable/website/punr/punr_ch12.html
+++ b/04_livrable/website/punr/punr_ch12.html
@@ -52,7 +52,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3984"><span id="page_154" class="STDgray STDsmall pb">[154]</span>Temps et description dans le récit d’aujourd’hui<br><span class="STDsmall">(1963)</span></h3>
+            <h3 id="d1e4000"><span id="page_154" class="STDgray STDsmall pb">[154]</span>Temps et description dans le récit d’aujourd’hui<br><span class="STDsmall">(1963)</span></h3>
             <p class="first">La critique est une chose difficile, bien plus que l’art, en un sens. Alors que le
                romancier, par exemple, peut se fier à sa seule sensibilité, sans toujours essayer
                d’en comprendre les choix, et que le simple lecteur se contente de savoir s’il est
@@ -107,7 +107,7 @@
                de constituer le sens de ces descriptions pratiquées aujourd’hui dans le <span id="page_157" class="STDgray STDsmall pb">[157]</span>roman. Une fois de plus, il semble que ce soit bien par référence au passé que l’on
                juge (et condamne) les recherches actuelles.</p>
             <p>Reconnaissons d’abord que la description n’est pas une invention moderne. Le grand
-               roman français du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle en particulier, <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> en tête, regorge de maisons, de mobiliers, de costumes, longuement, minutieusement
+               roman français du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle en particulier, <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> en tête, regorge de maisons, de mobiliers, de costumes, longuement, minutieusement
                décrits, sans compter les visages, les corps, etc. Et il est certain que ces descriptions-là
                ont pour but de faire voir et qu’elles y réussissent. Il s’agissait alors le plus
                souvent de planter un décor, de définir le cadre de l’action, de présenter l’apparence
@@ -196,7 +196,7 @@
                aussi, au sein de la critique traditionnelle, des réactions de défense encore plus
                vives.</p>
             <p>J’ai pu en faire personnellement l’expérience lors de la sortie de mon second film
-               (<span class="STDitalic">L’Immortelle</span>). Bien entendu, il n’y a pas lieu de s’étonner des jugements défavorables portés
+               (<span class="STDitalic"><span class="ref">L’Immortelle<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span></span>). Bien entendu, il n’y a pas lieu de s’étonner des jugements défavorables portés
                sur lui par la plupart des feuilletonnistes&nbsp;; mais il peut être intéressant de noter
                certains de leurs reproches, plus révélateurs souvent que des éloges. Voici donc les
                points sur lesquels se sont portées les attaques les plus fréquentes et les plus violentes&nbsp;:
@@ -227,7 +227,7 @@
                le présent de l’indicatif. Film et roman se rencontrent en tout cas, aujourd’hui,
                dans la construction d’instants, d’intervalles et de successions qui n’ont plus rien
                à voir avec ceux des horloges ou du calendrier. Essayons d’en préciser un peu le rôle.</p>
-            <p>On a beaucoup répété, ces dernières années, que le temps était le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span> principal du roman contemporain. Depuis <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, depuis <span class="ref">Faulkner<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, les retours dans le passé, les ruptures de chronologie, semblent en effet à la base
+            <p>On a beaucoup répété, ces dernières années, que le temps était le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span> principal du roman contemporain. Depuis <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, depuis <span class="ref">Faulkner<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, les retours dans le passé, les ruptures de chronologie, semblent en effet à la base
                de l’organisation même du récit, de son architecture. Il en serait de même évidemment
                du cinéma&nbsp;: toute œuvre cinématographique moderne serait une réflexion sur la mémoire
                humaine, ses incertitudes, son entêtement, ses drames, etc.</p>
@@ -237,7 +237,7 @@
                au contraire mettre en scène, le plus souvent, des structures mentales privées de
                <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;temps&nbsp;»</span>. Et c’est justement ce qui les rend au premier abord si déroutantes. Je prendrai
                quelques exemples, encore, dans mes propres livres <span id="page_164" class="STDgray STDsmall pb">[164]</span>ou films, dont la grande critique a, sur ce point, presque toujours faussé le sens.</p>
-            <p><span class="STDitalic">L’Année dernière à Marienbad,</span> à cause de son titre, à cause aussi des œuvres dont <span class="ref">Alain&nbsp;Resnais<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> avait auparavant réalisé la mise en scène, a d’emblée été interprété comme une de
+            <p><span class="STDitalic"><span class="ref">L’Année dernière à Marienbad<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>,</span> à cause de son titre, à cause aussi des œuvres dont <span class="ref">Alain&nbsp;Resnais<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> avait auparavant réalisé la mise en scène, a d’emblée été interprété comme une de
                ces variations psychologiques sur l’amour perdu, l’oubli, le souvenir. Les questions
                que l’on se posait le plus volontiers étaient&nbsp;: cet homme et cette femme se sont-ils
                vraiment rencontrés, aimés, l’année dernière à Marienbad&nbsp;? La jeune femme se souvient-elle
@@ -253,7 +253,7 @@
                des images que l’on voit, des paroles que l’on entend.</p>
             <p>Ainsi la durée de l’œuvre moderne n’est-elle en aucune manière un résumé, un condensé,
                d’une durée plus étendue et plus <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;réelle&nbsp;»</span> qui serait celle de l’anecdote, de l’histoire racontée. Il y a au contraire identité
-               absolue entre les deux durées. Toute l’histoire de <span class="STDitalic">Marienbad</span> ne se passe ni en deux <span id="page_165" class="STDgray STDsmall pb">[165]</span>ans, ni en trois jours, mais exactement en une heure et demie. Et, quand à la fin
+               absolue entre les deux durées. Toute l’histoire de <span class="STDitalic"><span class="ref">Marienbad<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span></span> ne se passe ni en deux <span id="page_165" class="STDgray STDsmall pb">[165]</span>ans, ni en trois jours, mais exactement en une heure et demie. Et, quand à la fin
                du film les deux héros se retrouvent pour partir ensemble, c’est comme si la jeune
                femme admettait qu’il y a eu bel et bien quelque chose entre eux l’année dernière
                à Marienbad, mais nous comprenons que nous étions justement l’année dernière, durant
@@ -278,7 +278,7 @@
                moi-même un calendrier préétabli, ainsi qu’on bat un jeu de cartes. Le récit était
                au contraire fait de telle façon que tout essai de reconstitution d’une chronologie
                extérieure aboutissait tôt ou tard à une série de contradictions, donc à une impasse.
-               Et cela non pas dans le but stupide de dérouter l’ <span class="ref">Académie<span class="refinfo">collective_entity, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, mais parce que précisément il n’existait pour moi aucun ordre possible en dehors
+               Et cela non pas dans le but stupide de dérouter l’ <span class="ref">Académie<span class="refinfo">collective_entity, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, mais parce que précisément il n’existait pour moi aucun ordre possible en dehors
                de celui du livre. Celui-ci n’était pas une narration emmêlée d’une anecdote simple
                extérieure à lui, mais ici encore le déroulement même d’une histoire qui n’avait d’autre
                réalité que celle du récit, déroulement qui ne s’opérait nulle part ailleurs que dans
