--- a/04_livrable/website/punr/punr_ch13.html
+++ b/04_livrable/website/punr/punr_ch13.html
@@ -52,7 +52,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e4212"><span id="page_170" class="STDgray STDsmall pb">[170]</span>Du réalisme à la réalité<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
+            <h3 id="d1e4228"><span id="page_170" class="STDgray STDsmall pb">[170]</span>Du réalisme à la réalité<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
             <p class="first">Tous les écrivains pensent être réalistes. Aucun jamais ne se prétend abstrait, illusionniste,
                chimérique, fantaisiste, faussaire... Le réalisme n’est pas une théorie, définie sans
                ambiguïté, qui permettrait d’opposer certains romanciers aux autres&nbsp;; c’est au contraire
@@ -65,11 +65,11 @@
                il en a toujours été de même&nbsp;: c’est par souci de réalisme que chaque nouvelle école
                littéraire voulait abattre celle qui la précédait&nbsp;; c’était le mot d’ordre des romanti<span id="page_171" class="STDgray STDsmall pb">[171]</span>ques contre les classiques, puis celui des naturalistes contre les romantiques&nbsp;; et
                les surréalistes eux-mêmes affirmaient à leur tour ne s’occuper que du monde réel.
-               Le réalisme, chez les écrivains, semble donc aussi bien partagé que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bon sens&nbsp;»</span> selon <span class="ref">Descartes<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>.</p>
+               Le réalisme, chez les écrivains, semble donc aussi bien partagé que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bon sens&nbsp;»</span> selon <span class="ref">Descartes<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>.</p>
             <p>Et, ici aussi, on doit conclure que tous ont raison. S’ils ne s’entendent pas, c’est
                que chacun a, sur la réalité, des idées différentes. Les classiques pensaient qu’elle
                est classique, les romantiques qu’elle est romantique, les surréalistes qu’elle est
-               surréelle, <span class="ref">Claudel<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> qu’elle est de nature divine, <span class="ref">Camus<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> qu’elle est absurde, les engagés qu’elle est avant tout économique et qu’elle va
+               surréelle, <span class="ref">Claudel<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> qu’elle est de nature divine, <span class="ref">Camus<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> qu’elle est absurde, les engagés qu’elle est avant tout économique et qu’elle va
                vers le socialisme. Chacun parle du monde tel qu’il le voit, mais personne ne le voit
                de la même façon.</p>
             <p>On comprend d’ailleurs aisément pourquoi les révolutions littéraires se sont toujours
@@ -130,7 +130,7 @@
                difficultés domestiques des classes pauvres. L’usine et le bidonville seront ainsi,
                par nature, plus <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;réalistes&nbsp;»</span> que l’oisiveté ou le luxe, l’adversité plus réaliste que le bonheur. Il ne s’agit,
                en somme, que de donner au monde des couleurs et une significations dépourvues de
-               mièvrerie, suivant une formule plus ou moins abâtardie d’<span class="ref">Émile&nbsp;Zola<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>.</p>
+               mièvrerie, suivant une formule plus ou moins abâtardie d’<span class="ref">Émile&nbsp;Zola<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>.</p>
             <p>Or tout cela n’a plus guère de sens à partir du moment où l’on s’aperçoit que, non
                seulement chacun voit dans le monde sa propre réalité, mais que le roman est justement
                ce qui la crée. L’écriture romanesque ne vise pas à informer, comme le fait la chronique,
@@ -154,7 +154,7 @@
                <span id="page_176" class="STDgray STDsmall pb">[176]</span>non conforme à l’analyse) de ce mari inquiet, fasciné par le comportement suspect
                (ou trop naturel) de sa femme. Et sans doute j’espère que mes romans et mes films
                sont défendables aussi de ce point de vue. Mais je sais bien que mon propos est ailleurs.
-               Je ne transcris pas, je construis. C’était déjà la vieille ambition de <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>&nbsp;: bâtir quelque chose à partir de rien, qui tienne debout tout seul sans avoir à
+               Je ne transcris pas, je construis. C’était déjà la vieille ambition de <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>&nbsp;: bâtir quelque chose à partir de rien, qui tienne debout tout seul sans avoir à
                s’appuyer sur quoi que ce soit d’extérieur à l’œuvre&nbsp;; c’est aujourd’hui l’ambition
                de tout le roman.</p>
             <p>On mesure à quel point le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vraisemblable&nbsp;»</span> et le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;conforme au type&nbsp;»</span> sont loin de pouvoir encore servir de critères. Tout se passe même comme si le <span class="STDitalic">faux</span>&nbsp;–&nbsp;c’est-à-dire à la fois le possible, l’impossible, l’hypothèse, le mensonge, etc.&nbsp;–&nbsp;était
@@ -164,13 +164,13 @@
                invente. Dès que ces héros-narrateurs commencent un tant soit peu à ressembler à des
                <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnages&nbsp;»</span>, ce sont aussitôt des menteurs, des schizophrènes ou des hallucinés (ou même des
                écrivains, qui créent leur propre histoire). Il faut souligner ici l’importance, dans
-               cette perspective, des romans de <span class="ref">Raymond&nbsp;Queneau<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> (<span class="STDitalic">Le Chiendent </span>et <span class="STDitalic">Loin de Rueil</span> en particulier) dont la trame souvent et toujours le mouvement sont d’une façon rigoureuse
+               cette perspective, des romans de <span class="ref">Raymond&nbsp;Queneau<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> (<span class="STDitalic">Le Chiendent </span>et <span class="STDitalic">Loin de Rueil</span> en particulier) dont la trame souvent et toujours le mouvement sont d’une façon rigoureuse
                ceux de l’imagination.</p>
             <div class="smallgap"></div>
             <p>Dans ce réalisme nouveau, il n’est donc plus du tout question de <span class="STDitalic">vérisme.</span> Le petit détail qui <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fait vrai&nbsp;»</span> ne retient plus l’attention du romancier, dans le spectacle du monde ni en littérature&nbsp;;
                ce qui le frappe&nbsp;–&nbsp;et que l’on retrouve après bien des avatars dans ce qu’il écrit&nbsp;–,
                ce serait davantage, au contraire, le petit détail qui fait <span class="STDitalic">faux.</span></p>
-            <p>Ainsi déjà dans le journal de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, lorsque celui-ci note les choses vues pendant la journée au cours de quelque promenade,
+            <p>Ainsi déjà dans le journal de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, lorsque celui-ci note les choses vues pendant la journée au cours de quelque promenade,
                il ne retient guère que des fragments non seulement sans importance, mais encore qui
                lui sont apparus coupés de leur signification –&nbsp;donc de leur <span class="STDitalic">vraisemblance</span>&nbsp;–, depuis la pierre abandonnée sans qu’on sache pourquoi au milieu d’une rue jusqu’au
                geste bizarre d’un passant, inachevé, maladroit, ne paraissant répondre à aucune fonction
@@ -183,7 +183,7 @@
                raison. Cela <span class="STDitalic">est,</span> et c’est tout. Mais il y a un risque pour l’écrivain&nbsp;: avec le soupçon d’absurdité
                revient le danger métaphysique. Le non-sens, l’a-causalité, le vide attirent irrésistiblement
                les arrière-mondes et les sur-natures.</p>
-            <p>La mésaventure de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> dans ce domaine est exemplaire. Cet auteur <span class="STDitalic">réaliste</span> (dans l’acception nouvelle que nous tentons de définir&nbsp;: créateur d’un <span id="page_178" class="STDgray STDsmall pb">[178]</span>monde matériel, à la présence visionnaire) est aussi celui qui a été le plus chargé
+            <p>La mésaventure de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> dans ce domaine est exemplaire. Cet auteur <span class="STDitalic">réaliste</span> (dans l’acception nouvelle que nous tentons de définir&nbsp;: créateur d’un <span id="page_178" class="STDgray STDsmall pb">[178]</span>monde matériel, à la présence visionnaire) est aussi celui qui a été le plus chargé
                de sens&nbsp;–&nbsp;de sens <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;profond&nbsp;»</span>&nbsp;–&nbsp;par ses admirateurs et exégètes. Très vite il est devenu, avant tout, aux yeux
                du public, l’homme qui faisait semblant de nous parler des choses de ce monde, dans
                le seul but de nous faire entrevoir l’existence problématique d’un au-delà. Ainsi
@@ -192,7 +192,7 @@
                vie proche et lointaine d’un mystérieux château. Lorsqu’il nous montre les bureaux,
                les escaliers et les couloirs où Joseph K... poursuit la justice, ce serait uniquement
                pour nous entretenir de la notion théologique de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;grâce&nbsp;»</span>. Et le reste à l’avenant.</p>
-            <p>Les récits de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> ne seraient alors que des allégories. Non seulement ils appelleraient une explication
+            <p>Les récits de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> ne seraient alors que des allégories. Non seulement ils appelleraient une explication
                (qui les résumerait d’une façon parfaite, au point d’en épuiser tout le contenu),
                mais cette signification aurait en outre pour effet de détruire radicalement l’univers
                tangible qui en constitue la trame. La littérature, d’ailleurs, consisterait toujours,
@@ -201,11 +201,11 @@
                description truquée des choses visibles&nbsp;–&nbsp;elles-mêmes tout à fait vaines&nbsp;–&nbsp;il évoquerait
                le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;réel&nbsp;»</span> qui se cache derrière.</p>
             <p>Or, ce dont une lecture non prévenue nous convainc, au contraire, c’est de la réalité
-               absolue des choses que décrit <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>. Le monde visible de <span id="page_179" class="STDgray STDsmall pb">[179]</span>ses romans est bien, pour lui, le monde réel, et ce qu’il y a derrière (s’il y a quelque
+               absolue des choses que décrit <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>. Le monde visible de <span id="page_179" class="STDgray STDsmall pb">[179]</span>ses romans est bien, pour lui, le monde réel, et ce qu’il y a derrière (s’il y a quelque
                chose) paraît sans valeur, face à l’évidence des objets, gestes, paroles, etc. L’effet
                d’hallucination provient de leur netteté extraordinaire, et non de flottements ou
                de brumes. Rien n’est plus fantastique, en définitive, que la précision. Peut-être
-               les escaliers de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> mènent-ils ailleurs, mais eux sont là, et on les regarde, marche par marche, en suivant
+               les escaliers de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> mènent-ils ailleurs, mais eux sont là, et on les regarde, marche par marche, en suivant
                le détail des barreaux et de la rampe. Peut-être ses murs gris cachent-ils quelque
                chose, mais c’est à eux que la mémoire s’arrête, sur leur enduit craquelé, sur leurs
                lézardes. Même ce dont le héros est en quête disparaît, devant l’obstination qu’il
@@ -246,7 +246,7 @@
                décadent, inhumain et noir. Mais la bonne santé à laquelle ce jugement fait allusion
                est celle des œillères et du formol, celle de la mort. On est toujours décadent par
                rapport aux choses du passé&nbsp;: le béton armé par rapport à la pierre, le socialisme
-               par rapport à la monarchie paternaliste, <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> par rapport à <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>. Et ce n’est guère être inhumain que de vouloir bâtir une nouvelle vie pour l’homme&nbsp;;
+               par rapport à la monarchie paternaliste, <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> par rapport à <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>. Et ce n’est guère être inhumain que de vouloir bâtir une nouvelle vie pour l’homme&nbsp;;
                cette vie ne paraît noire que si&nbsp;–&nbsp;toujours en train de pleurer les anciennes couleurs&nbsp;–&nbsp;on
                ne cherche pas à voir les nouvelles beautés qui l’éclairent. Ce que propose l’art
                d’aujourd’hui au lecteur, au spectateur, c’est en tout cas une façon de vivre, dans
