--- a/04_livrable/website/punr/punr_ch07.html
+++ b/04_livrable/website/punr/punr_ch07.html
@@ -52,7 +52,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e2259">La conscience malade de Zeno<br><span class="STDsmall">(1954)</span></h3>
+            <h3 id="d1e2275">La conscience malade de Zeno<br><span class="STDsmall">(1954)</span></h3>
             <p class="first">Zeno Cosini, riche négociant triestin (le Trieste autrichien d’avant la guerre de&nbsp;14),
                rédige pour un psychanalyste les faits principaux de son existence passée. Études
                universitaires incertaines, mort du père, passion volontairement éprouvée pour une
@@ -119,7 +119,7 @@
                ou de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">Molloy</span> que la paralysie gagne progressivement depuis le pied. Sa mort, Zeno la connaît d’avance&nbsp;:
                elle commencera par la gangrène des membres inférieurs. Il n’est pas jusqu’à cette
                ville <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;irrédente&nbsp;»</span> de Trieste, où l’on ne parle pas l’italien mais un dialecte mêlé d’allemand et de
-               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> et au Dublin anglo-irlandais de <span class="ref">Joyce<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une confession écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
+               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> et au Dublin anglo-irlandais de <span class="ref">Joyce<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une confession écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
                   que nous mentons&nbsp;!&nbsp;»</span></p>
             <p>Par surcroît, le narrateur est de mauvaise foi. En présentant son récit, le psychanalyste
                précise qu’il contient une bonne quantité de mensonges. Zeno lui-même en signale quelques-uns
@@ -142,7 +142,7 @@
             <p>Temps malade, langage malade, libido malade, démarche malade, vie malade, conscience
                malade..., il ne faut bien évidemment pas voir là-dedans une vague allégorie sur la
                faute originelle, ou quelque autre lamentation métaphysique. Il s’agit de vie quotidienne
-               et d’expérience directe du monde. Ce que nous dit ainsi <span class="ref">Italo&nbsp;Svevo<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, c’est que, dans notre société moderne, plus rien n’est <span class="STDitalic">naturel</span>. Et il n’y a même pas de raison pour s’en affliger. Nous pouvons parfaitement être
+               et d’expérience directe du monde. Ce que nous dit ainsi <span class="ref">Italo&nbsp;Svevo<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, c’est que, dans notre société moderne, plus rien n’est <span class="STDitalic">naturel</span>. Et il n’y a même pas de raison pour s’en affliger. Nous pouvons parfaitement être
                joyeux, parler, faire l’amour, faire des affaires, faire la guerre, écrire des romans&nbsp;;
                mais rien de cela ne se fera plus sans y penser, comme on respire. Chacune de nos
                actions se réfléchit sur elle-même et se charge de questions. Sous notre regard, le
