--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -52,12 +52,12 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3585">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
+            <h3 id="d1e3601">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
             <p class="first"><span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
-                  merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
+                  merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
                qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
                des spécialistes, noyés par profession dans le flot quotidien des récits linéaires,
-               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('unknown1','2','9',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
+               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('unknown1','2','9',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
             <p>Il faut bien tenter d’en retracer, sinon les anecdotes –&nbsp;qui se nouent et se dissolvent
                à chaque page dans des contradictions, des variantes et des sauts périlleux où l’on
                retombe moins souvent sur les pieds que sur la tête&nbsp;–&nbsp;du moins le <span class="STDitalic">mouvement</span> qui, s’il est quelquefois difficile à saisir au milieu de ce sabotage permanent,
@@ -100,7 +100,7 @@
                morceaux de réalité décomposée qui se révèlent au moins aussi curieux que tout ce
                qui précédait, aussi riches, aussi passionnants&nbsp;: des mots qui tombent du ciel sans
                laisser de traces, des enfants qui parlent <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;à l’envers&nbsp;»</span>, un petit bout d’oreille qui bouge près d’une colonne dans une réunion publique...
-               Il est désormais impossible de dire si <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="axi"></span>.</span></span> est un chercheur minutieux dans son laboratoire ou un voyant qui abuse de sa drogue.
+               Il est désormais impossible de dire si <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref1">mention</span>, <span class="Axi"></span>.</span></span> est un chercheur minutieux dans son laboratoire ou un voyant qui abuse de sa drogue.
                Le récit se clôt sur cette conclusion <span class="STDitalic">énigmatique&nbsp;:</span><span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;Voilà. Je n’ai plus rien à dire, néanmoins tout me demeure, j’ai gagné.&nbsp;»</span></p>
             <p>Mais inéluctablement, pour <span class="quote" onclick="displayExtract('pr_02_81','2','0',1);">«&nbsp;l’honneur de continuer&nbsp;»</span>, voici que tout recommence. Cela s’appelle cette fois <span class="STDitalic">Le Renard et la Boussole.</span> Le nouveau roman débute dans une sorte de grisaille, au réveil comme d’habitude&nbsp;;
                des <span class="STDitalic">possibles</span> errent dans les coins&nbsp;–&nbsp;des vies possibles, des littératures possibles... Un roman,
@@ -127,7 +127,7 @@
                s’ouvrant tous par ces trois mots, mais dégénérant à la fin en une cacophonie de phrases
                sans suite, de cris, de balbutiements et autres <span class="quote" onclick="displayExtract('pr_02_239','2','1',1);">«&nbsp;bruits de bouche&nbsp;»</span>.</p>
             <p>Une fois de plus tout est à refaire. Cependant, en un sens (le seul qui nous importe),
-               <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> a encore <span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;gagné&nbsp;»</span>.</p>
+               <span class="ref">Robert&nbsp;Pinget<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> a encore <span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;gagné&nbsp;»</span>.</p>
          </article>
          <section class="extract_section">
             <div id="unknown_0" class="extractHide">
