--- a/04_livrable/website/punr/punr_ch11.html
+++ b/04_livrable/website/punr/punr_ch11.html
@@ -48,15 +48,15 @@
          <div class="articlenavs">
             <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button><h6>Sous-sections</h6>
             <ul id="articlenav">
-               <li><a href="#d1e3758">Nouveau roman, homme nouveau</a></li>
+               <li><a href="#d1e3774">Nouveau roman, homme nouveau</a></li>
                <ol>
-                  <li><a href="#d1e3779">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
-                  <li><a href="#d1e3815">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
-                  <li><a href="#d1e3878">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
-                  <li><a href="#d1e3902">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
-                  <li><a href="#d1e3931">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
-                  <li><a href="#d1e3946">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
-                  <li><a href="#d1e3964">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
+                  <li><a href="#d1e3795">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
+                  <li><a href="#d1e3831">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
+                  <li><a href="#d1e3894">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
+                  <li><a href="#d1e3918">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
+                  <li><a href="#d1e3947">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
+                  <li><a href="#d1e3962">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
+                  <li><a href="#d1e3980">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
                </ol>
             </ul>
          </div>
@@ -65,7 +65,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3758"><span id="page_142" class="STDgray STDsmall pb">[142]</span>Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
+            <h3 id="d1e3774"><span id="page_142" class="STDgray STDsmall pb">[142]</span>Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
             <p class="first">On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
                et aussi, souvent, parmi les éloges, il y avait tant de simplifications extrêmes,
                tant d’erreurs, tant de malentendus, qu’une sorte de mythe monstrueux a fini par se
@@ -92,11 +92,11 @@
                qu’il serait plus raisonnable de dire&nbsp;:</p>
             <div class="smallgap"></div>
             <div id="" type="subsection">
-               <h4 id="d1e3779">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
+               <h4 id="d1e3795">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
                <div class="smallgap"></div>
                <p>Il n’a donc codifié aucune loi. Ce qui fait qu’il ne s’agit pas d’une école littéraire
                   au sens étroit du terme. Nous sommes les premiers à savoir qu’il y a entre nos œuvres
-                  respectives&nbsp;–&nbsp;celle de <span class="ref">Claude&nbsp;Simon<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> et la mienne, par exemple&nbsp;–&nbsp;des différences considérables, et nous pensons que c’est
+                  respectives&nbsp;–&nbsp;celle de <span class="ref">Claude&nbsp;Simon<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> et la mienne, par exemple&nbsp;–&nbsp;des différences considérables, et nous pensons que c’est
                   très bien ainsi. Quel intérêt y aurait-il à ce que nous écrivions tous les deux, si
                   nous écrivions la même chose&nbsp;?</p>
                <p><span id="page_144" class="STDgray STDsmall pb">[144]</span>Mais ces différences n’ont-elles pas toujours existé au sein de toutes les <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;écoles&nbsp;»</span>&nbsp;? Ce que l’on trouve de commun entre les individus, dans chacun des mouvements littéraires
@@ -120,11 +120,11 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3815">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
+               <h4 id="d1e3831">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
                <div class="smallgap"></div>
                <p>L’erreur est de croire que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vrai roman&nbsp;»</span> s’est figé une fois pour toutes, à l’époque balzacienne, en des règles strictes et
-                  définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
-               <p>Et, depuis, l’évolution n’a cessé de s’accentuer&nbsp;: <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, <span class="ref">Dostoïevsky<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, <span class="ref">Joyce<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, <span class="ref">Faulkner<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, <span class="ref">Beckett<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>... Loin de faire table rase du passé, c’est sur les noms de nos prédécesseurs que
+                  définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
+               <p>Et, depuis, l’évolution n’a cessé de s’accentuer&nbsp;: <span class="ref">Flaubert<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Dostoïevsky<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Proust<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Joyce<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Faulkner<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Beckett<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>... Loin de faire table rase du passé, c’est sur les noms de nos prédécesseurs que
                   nous nous sommes le plus aisément mis d’accord&nbsp;; et notre ambition est seulement de
                   les continuer. Non pas de faire mieux, ce qui n’a aucun sens, mais de nous placer
                   à leur suite, maintenant, à notre heure.</p>
@@ -133,7 +133,7 @@
                   quarante années, de tout roman vivant, ou se sont du moins singulièrement effrités&nbsp;:
                   les caractères, la chronologie, les études sociologiques, etc. Le Nouveau Roman aura
                   en tout cas eu ce mérite de faire <span id="page_146" class="STDgray STDsmall pb">[146]</span>prendre conscience à un public assez large (et sans cesse grandissant) d’une évolution
-                  générale du genre, alors qu’on persistait à la nier, reléguant par principe <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, <span class="ref">Faulkner<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> et tous les autres dans de douteuses zones marginales, quand ils sont simplement
+                  générale du genre, alors qu’on persistait à la nier, reléguant par principe <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Faulkner<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> et tous les autres dans de douteuses zones marginales, quand ils sont simplement
                   les grands romanciers du début de ce siècle.</p>
                <p>Et depuis vingt ans, sans doute, les choses s’accélèrent, mais ce n’est pas dans le
                   domaine de l’art uniquement, chacun en conviendra. Si le lecteur a quelquefois du
@@ -142,7 +142,7 @@
                   et des vieilles normes.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3878">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
+               <h4 id="d1e3894">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
                <p>Comme il n’y avait pas, dans nos livres, de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnages&nbsp;»</span> au sens traditionnel du mot, on en a conclu, un peu hâtivement, qu’on n’y rencontrait
                   pas d’hommes du tout. C’était bien mal les lire. L’homme y est présent à chaque page,
                   à chaque ligne, à chaque mot. Même si l’on y trouve beaucoup d’objets, et décrits
@@ -158,7 +158,7 @@
                   objets le souvenir (par quoi je retourne aux objets passés), le projet (qui me transporte
                   dans des objets futurs&nbsp;: si je décide d’aller me baigner, je vois déjà la mer et la
                   plage, dans ma tête) et toute forme d’imagination.</p>
-               <p>Quant à ce que l’on appelle plus précisément des <span class="STDitalic">choses,</span> il y en a toujours eu beaucoup dans le roman. Que l’on songe à <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>&nbsp;: maisons, mobilier, vêtements, bijoux, ustensiles, machines, tout y est décrit avec
+               <p>Quant à ce que l’on appelle plus précisément des <span class="STDitalic">choses,</span> il y en a toujours eu beaucoup dans le roman. Que l’on songe à <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>&nbsp;: maisons, mobilier, vêtements, bijoux, ustensiles, machines, tout y est décrit avec
                   un soin qui n’a rien à envier aux ouvrages modernes. Si ces objets-là sont, comme
                   on dit, plus <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;humains&nbsp;»</span> que les nôtres, c’est seulement&nbsp;–&nbsp;et nous y reviendrons&nbsp;–&nbsp;que la situation de l’homme
                   dans le monde qu’il habite n’est plus aujourd’hui la même qu’il y a cent ans. Et non
@@ -167,7 +167,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3902">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
+               <h4 id="d1e3918">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
                <div class="smallgap"></div>
                <p>Comme il y avait beaucoup d’objets dans nos livres, et qu’on leur trouvait quelque
                   chose d’insolite, on a bien vite fait un sort au mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;objectivité&nbsp;»</span>, prononcé à leur sujet par certains critiques dans un sens pourtant très spécial&nbsp;:
@@ -176,7 +176,7 @@
                   moins neutre, le moins impartial des hommes&nbsp;: engagé au contraire <span class="STDitalic">toujours</span> dans une aventure passionnelle des plus obsédantes, au point de déformer souvent
                   sa vision et de produire chez lui des imaginations proches du délire.</p>
                <p>Aussi est-il aisé de montrer que mes romans –&nbsp;comme ceux de tous mes amis&nbsp;–&nbsp;sont plus
-                  subjectifs même que ceux de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>, par exemple. Qui décrit le monde dans les romans de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span>&nbsp;? Quel est ce narrateur omniscient, omniprésent, qui se place partout en même temps,
+                  subjectifs même que ceux de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, par exemple. Qui décrit le monde dans les romans de <span class="ref">Balzac<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>&nbsp;? Quel est ce narrateur omniscient, omniprésent, qui se place partout en même temps,
                   qui voit en même temps l’endroit et l’envers des choses, qui suit en même temps les
                   mouvements du visage et ceux de la conscience, qui connaît à la fois le présent, le
                   passé et l’avenir de toute aventure&nbsp;? Ça ne peut être qu’un Dieu.</p>
@@ -190,7 +190,7 @@
                   idées toutes faites, en littérature comme dans la vie.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3931">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
+               <h4 id="d1e3947">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
                <div class="smallgap"></div>
                <p>Car il s’agit ici d’expérience vécue, et non des schémas rassurants&nbsp;–&nbsp;et désespérants
                   tout à la fois&nbsp;–&nbsp;qui tentent de limiter les dégâts et d’assigner un ordre conventionnel
@@ -205,13 +205,13 @@
                   pas à coller dessus une grille d’interprétation périmée, qui n’est plus bonne déjà
                   depuis près de cinquante ans. On peut même se demander si une certaine culture littéraire
                   justement ne nuit pas à leur compréhension&nbsp;: celle qui s’est arrêtée à&nbsp;1900. Cependant
-                  que des gens très simples, qui ne connaissent pas <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="axi"></span>.</span></span> peut-être, mais qui ne sont pas obnubilés non plus par les formes balzaciennes, se
+                  que des gens très simples, qui ne connaissent pas <span class="ref">Kafka<span class="refinfo">author, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> peut-être, mais qui ne sont pas obnubilés non plus par les formes balzaciennes, se
                   trouvent de plain-pied avec des livres où ils reconnaissent le monde où ils vivent,
                   et leur propre pensée, et qui, au lieu de les tromper sur une prétendue signification
                   de leur existence, les aideront à y voir plus clair.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3946">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
+               <h4 id="d1e3962">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
                <div class="smallgap"></div>
                <p>Et l’on arrive à la grande question&nbsp;: notre vie a-t-elle un sens&nbsp;? Quel est-il&nbsp;? Quelle
                   est la place de l’homme sur la terre&nbsp;? On voit tout de suite pourquoi les objets balzaciens
@@ -241,7 +241,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3964">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
+               <h4 id="d1e3980">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
                <div class="smallgap"></div>
                <p>Il n’est pas raisonnable, dès lors, de prétendre dans nos romans servir une cause
                   politique, même une cause qui nous paraît juste, même si dans notre vie politique
